Use howmany() instead of "/" to calculate the number of cylinders for the changed file system, so as to not drop a partial cylinder at the end.  Fixes PR bin/44177.